--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@iconify-json/fa6-brands": "^1.2.5",
+		"@iconify-json/mdi": "^1.2.3",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -25,6 +27,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
+		"unplugin-icons": "^22.1.0",
 		"vite": "^6.2.6"
 	}
 }
