--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
 		"svelte": "^5.0.0",
 		"unplugin-icons": "^22.1.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"@atproto/api": "^0.15.6"
 	}
 }
