--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@eslint/js": "^9.18.0",
 		"@iconify-json/fa6-brands": "^1.2.5",
 		"@iconify-json/mdi": "^1.2.3",
+		"@resvg/resvg-js": "^2.6.2",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -26,6 +27,8 @@
 		"mdsvex": "^0.12.3",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
+		"satori": "^0.13.1",
+		"satori-html": "^0.3.2",
 		"svelte": "^5.0.0",
 		"unplugin-icons": "^22.1.0",
 		"vite": "^6.2.6"
