--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@atproto/api": "^0.15.6"
+		"@atproto/api": "^0.15.6",
+		"bits-ui": "^2.8.10"
 	}
 }
