--- a/static/social-cards/feeds/.gitignore
+++ b/static/social-cards/feeds/.gitignore
@@ -1,3 +1,3 @@
-# Files to ignore. (in general, social cards shouldn't ever be committed, and are
+# Files to ignore. (in general, these social cards shouldn't ever be committed, and are
 # instead generated on the fly.)
 *.png
